# sdl2pp

./: CMakeLists.txt  README.md  main.cpp  sdl2pp.h
include/: Event.h  EventDispatcher.h  Exception.h  Init.h  InitImage.h  Renderer.h  Size.h  Surface.h  Texture.h  Window.h  define.h  sdl2pp.h
internal/: Exception.h  Init.h  InitImage.h  Window.h  define.h  macros.h
src/: Event.cpp  EventDispatcher.cpp  Init.cpp  InitImage.cpp  Renderer.cpp  Surface.cpp  Texture.cpp  Window.cpp  internal_define.h
